testutils/test/generated_ingresses/basic_server_large_client_headers.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: large-client-headers-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/server-snippet: |
      large_client_header_buffers 4 32k;
spec:
  tls:
    - hosts:
        - test.us-east.stg.containers.appdomain.cloud
      secretName: testSecret
  rules:
    - host: test.us-east.stg.containers.appdomain.cloud
